--- a/web0/src/main/webapp/WEB-INF/web.xml
+++ b/web0/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,7 @@
   	<servlet-name>ControllerServlet</servlet-name>
   	<display-name>ControllerServlet</display-name>
   	<description></description>
-  	<servlet-class>com.microforum.repartido6.ControllerServlet</servlet-class>
+  	<servlet-class>com.microforum.ControllerServlet</servlet-class>
   </servlet>
   <servlet-mapping>
   	<servlet-name>ControllerServlet</servlet-name>
