--- a/web0/pom.xml
+++ b/web0/pom.xml
@@ -22,6 +22,6 @@
 		</dependency>
 	</dependencies>
   <build>
-    <finalName>repartido6</finalName>
+    <finalName>web0</finalName>
   </build>
 </project>
