--- a/web1/src/main/webapp/WEB-INF/web.xml
+++ b/web1/src/main/webapp/WEB-INF/web.xml
@@ -1,15 +1,12 @@
-<web-app xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
-          http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
-	version="3.0">
-
-	<display-name>web1</display-name>
-	<servlet>
-		<servlet-name>ControllerServlet</servlet-name>
-		<servlet-class>com.microforum.ControllerServlet</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>ControllerServlet</servlet-name>
-		<url-pattern>/ControllerServlet</url-pattern>
-	</servlet-mapping>
-</web-app>
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
+  <display-name>web1</display-name>
+  <servlet>
+    <servlet-name>ControllerServlet</servlet-name>
+    <servlet-class>com.microforum.ControllerServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ControllerServlet</servlet-name>
+    <url-pattern>/ControllerServlet</url-pattern>
+  </servlet-mapping>
+ </web-app>
